--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,1 +1,22 @@
-<p>recipe-detail works!</p>
+<div class="row">
+    <div class="col-xs-12">
+        <img class="img-fluid"> 
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <h2>Recipe name</h2>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <div class="btn-group">
+            <button type="button" class="btn btn-primary dropdown-toggle"></button>
+            <ul class="dropdown-menu">
+                <li><a href="#">To Shopping List</a></li>
+                <li><a href="#">Edit Recipe</a></li>
+                <li><a href="#">Delete Recipe</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
