--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,13 +7,13 @@
 <div class="row">
   <div class="col-xs-12">
     <app-recipe-item
+      (recipeSelected)="recipeGot($event)"
       href="#"
       class="list-group-item clearfix"
       *ngFor="let recipe of recipes" [oneRecipe]="recipe">
 
 
     </app-recipe-item>
-    <app-recipe-item></app-recipe-item>
-  </div>
+    </div>
 </div>
 
