--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,4 @@
-<div (click)="recipeClicked()">
+<a (click)="recipeClicked()">
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
     <p class="list-group-item-text">{{ recipe.description }}</p>
@@ -10,4 +10,4 @@
       class="img-responsive"
       style="max-height: 50px;">
   </span>
-</div>
+</a>
