--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,9 +1,9 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list (recipeSelected)="recipeWasSelected($event)"></app-recipe-list>
+    <app-recipe-list ></app-recipe-list>
   </div>
   <div class="col-md-7"> 
     <!-- *TODO PASS THE SELCTED RECIPE ON THE APP RECIE DETAIL AND SHOW IT -->
-    <app-recipe-detail [recipe]="recipeSelectedThatWasSelected"></app-recipe-detail>
+    <app-recipe-detail ></app-recipe-detail>
   </div>
 </div>
