--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -30,7 +30,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-12">
-    Ingredients
+  <div class="col-xs-12" *ngFor="let ingredient of recipe.ingredients">
+    Ingredients: {{ingredient}}
   </div>
 </div>
