--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -31,6 +31,6 @@
 </div>
 <div class="row">
   <div class="col-xs-12" *ngFor="let ingredient of recipe.ingredients">
-    Ingredients: {{ingredient}}
+    Ingredients: {{ingredient.name}} -- {{ingredient.amount}}
   </div>
 </div>
