--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -17,7 +17,7 @@
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#">To Shopping List</a></li>
+        <li><a href="#" (click)="addToShoppingList(recipe.ingredients)">To Shopping List</a></li>
         <li><a href="#">Edit Recipe</a></li>
         <li><a href="#">Delete Recipe</a></li>
       </ul>
@@ -31,6 +31,6 @@
 </div>
 <div class="row">
   <div class="col-xs-12" *ngFor="let ingredient of recipe.ingredients">
-    Ingredients: {{ingredient.name}} -- {{ingredient.amount}}
+    Ingredients: {{ingredient.name}} -- {{ingredient.ammount}}
   </div>
 </div>
