--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <div *ngIf="recipesSelected">
-        <app-recipes></app-recipes>
-      </div>
-      <div *ngIf="shoppingListSelected">
-        <app-shopping-list></app-shopping-list>
-      </div>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
