--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,8 +6,8 @@
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a (click)="GoToRecipes()">Recipes</a></li>
-        <li><a (click)="GoToShoppingList()">Shopping List</a></li>
+        <li><a style="cursor: pointer" (click)="GoToRecipes()">Recipes</a></li>
+        <li><a style="cursor: pointer" (click)="GoToShoppingList()">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li appDropdown class="dropdown">
