--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -4,6 +4,6 @@
   </div>
   <div class="col-md-7"> 
     <!-- *TODO PASS THE SELCTED RECIPE ON THE APP RECIE DETAIL AND SHOW IT -->
-    <app-recipe-detail ></app-recipe-detail>
+    <router-outlet></router-outlet>
   </div>
 </div>
