--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="['/recipes', recipe.id]" style="cursor: pointer">
+<a  [routerLink]="[recipe.id]" routerLinkActive="active" style="cursor: pointer">
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
     <p class="list-group-item-text">{{ recipe.description }}</p>
